# openai-tts

./: .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
