[tool.poetry]
name = "openai-tts"
version = "0.1.0"
description = ""
authors = ["Sylwester Rogalski <rsylwester@icloud.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
gradio = "==4.12.*,>=4.12.0"
openai = "==1.2.*,>=1.2.3"
python-dotenv = "==1.0.*,>=1.0.0"
pydub = "^0.25.1"
matplotlib = "^3.8.3"
ffmpeg = "^1.4"
